# luxor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  railway.json
.github/workflows/: CI.yml
docs/: plan.md
migrations/: 20260710000001_create_users.sql  20260710000002_create_auth_sessions.sql  20260710000003_create_audit_events.sql  20260718000001_add_user_role.sql  20260718000002_add_session_family_expiry.sql  20260718000003_rename_users_email_constraint.sql
public/: demo.wasm  index.html  script.js  styles.css
src/: cache.rs  config.rs  db.rs  dev_postgres.rs  error.rs  lib.rs  main.rs  models.rs  observability.rs  permissions.rs  queue.rs  rate_limit.rs  server.rs  state.rs
src/auth/: jwt.rs  mod.rs  oauth.rs  password.rs  refresh.rs
src/handlers/: auth.rs  basic.rs  cache.rs  demo.rs  jobs.rs  mod.rs  permissions.rs
src/services/: auth.rs
tests/: infrastructure.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
