[package]
name = "luxor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "0.17.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
rand = "0.8.5"
redis = { version = "0.27.6", features = ["aio", "connection-manager", "tokio-comp"] }
secrecy = { version = "0.10.3", features = ["serde"] }
sentry = { version = "0.36.0", default-features = false, features = ["contexts", "panic", "reqwest", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros"] }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "request-id", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
